--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4486,5 +4486,31 @@ location = {Austin, TX, USA},
   volume={71},
   number={7--9},
   pages={1159--1171},
+  month={March},
   year={2008}
+}
+
+@article{Silver:NATURE'16,
+  title={Mastering the game of {Go} with deep neural networks and tree search},
+  author={David Silver and Aja Huang and Chris J. Maddison and Arthur Guez and Laurent Sifre and George van den Driessche and Julian Schrittwieser and Ioannis Antonoglou and Veda Panneershelvam and Marc Lanctot and Sander Dieleman and Dominik Grewe and John Nham and Nal Kalchbrenner and Ilya Sutskever and Timothy Lillicrap and Madeleine Leach and Koray Kavukcuoglu and Thore Graepel and Demis Hassabis},
+  journal={Nature},
+  volume={529},
+  OPTnumber={7--9},
+  pages={484--489},
+  month={January},
+  year={2016}
+}
+
+@article{Vinyals:NATURE'19,
+  title={Grandmaster level in {StarCraft II} using multi-agent reinforcement learning},
+  author={Oriol Vinyals and Igor Babuschkin and Wojciech M. Czarnecki and Michaël Mathieu and
+Andrew Dudzik and Junyoung Chung and David H. Choi and Richard Powell and Timo Ewalds and Petko Georgiev and Junhyuk Oh and Dan Horgan and Manuel Kroiss and Ivo Danihelka and
+Aja Huang and Laurent Sifre and Trevor Cai and John P. Agapiou and Max Jaderberg and
+Alexander S. Vezhnevets and Rémi Leblond and Tobias Pohlen and Valentin Dalibard and David Budden and Yury Sulsky and James Molloy and Tom L. Paine and Caglar Gulcehre and Ziyu Wang and Tobias Pfaff and Yuhuai Wu and Roman Ring and Dani Yogatama and Dario Wünsch and Katrina McKinney and Oliver Smith and Tom Schaul and Timothy Lillicrap and Koray Kavukcuoglu and Demis Hassabis and Chris Apps and David Silver},
+  journal={Nature},
+  volume={575},
+  OPTnumber={7--9},
+  pages={350--354},
+  month={October},
+  year={2019}
 }
