--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4514,3 +4514,30 @@ Alexander S. Vezhnevets and Rémi Leblond and Tobias Pohlen and Valentin Dalibar
   month={October},
   year={2019}
 }
+
+@inproceedings{Neto:ICCAD'19,
+	title={{LSOracle}: a Logic Synthesis Framework Driven by Artificial Intelligence},
+	author={Walter Lau Neto and Max Austin and Scott Temple and Luca Amaru and Xifan Tang and Pierre-Emmanuel Gaillardon},
+	booktitle=iccad,
+	year={2019},
+	month={November},
+	location = {Westminster, CO},
+}
+
+@inproceedings{Beerel:ISCAS'18,
+	title={Opportunities for Machine Learning in Electronic Design Automation},
+	author={Peter A. Beerel and Massoud Pedram},
+	booktitle=iscas,
+	year={2018},
+	month={May},
+	location = {Florence, Italy},
+}
+
+@inproceedings{Jin:ICCAD'20,
+	title={Full-Chip Thermal Map Estimation for Commercial Multi-Core {CPUs} with Generative Adversarial Learning},
+	author={Wentian Jin and Sheriff Sadiqbatcha and Jinwei Zhang and Sheldon X.-D. Tan},
+	booktitle=iccad,
+	year={2020},
+	month={November},
+	location = {San Diego, CA},
+}
