--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -48,6 +48,7 @@
 @string{nips="Proc. Conf. on Neural Information Processing Systems (NeurIPS)"}
 @string{tpami="IEEE Trans. on Pattern Analysis and Machine Intelligence"}
 @string{tnn="IEEE Trans. on Neural Networks"}
+@string{tnnls="IEEE Trans. on Neural Networks and Learning Systems"}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
@@ -1589,6 +1590,7 @@ year={2008},
   year =         {2006},
   pages =    {873--886},
 }
+
 @Article{Kim:Computer'03,
   author =       {N. S. Kim and Todd Austin and David Blaauw and Trevor Mudge and Krisztián Flautner and Jie S. Hu and Mahmut Kandemir and Vijaykrishnan Narayanan},
   title =        {Leakage current: Moore's law meets static power},
@@ -4540,4 +4542,26 @@ Alexander S. Vezhnevets and Rémi Leblond and Tobias Pohlen and Valentin Dalibar
 	year={2020},
 	month={November},
 	location = {San Diego, CA},
+}
+
+@ARTICLE{Li:TNNLS'12,
+	author = {Decai Li and Min Han and Jun Wang},
+	title = {Chaotic Time Series Prediction Based on a Novel Robust Echo State Network},
+	journal = tnnls,
+	year = {2012},
+        month = {May},
+        volume = {23},
+        number = {5},
+        pages = {787--799},
+}
+
+@Article{Xu:TCYB'16,
+  author =       {Meiling Xu and Min Han},
+  title =        {Adaptive Elastic Echo State Network for Multivariate Time Series Prediction},
+  journal =       {IEEE Trans. on Cybernetics},
+  volume =   {46},
+  number =   {10},
+  year =         {2016},
+  month = {October},
+  pages =    {2173--2183},
 }
