--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -49,6 +49,7 @@
 @string{tpami="IEEE Trans. on Pattern Analysis and Machine Intelligence"}
 @string{tnn="IEEE Trans. on Neural Networks"}
 @string{tnnls="IEEE Trans. on Neural Networks and Learning Systems"}
+@string{neuralcomp="Neural Computation"}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
@@ -2184,7 +2185,7 @@ Year={2016}
 @article{Williams:NC'89,
   title={A learning algorithm for continually running fully recurrent neural networks},
   author={Ronald J Williams and David Zipser},
-  journal={Neural Computation},
+  journal=neuralcomp,
   volume={1},
   number={2},
   pages={270--280},
@@ -3036,7 +3037,7 @@ year={2014}
 @article{Hochreiter:NC'97,
   title={Long Short-Term Memory},
   author={Sepp Hochreiter and J\"{u}rgen Schmidhuber},
-  journal={Neural Computation},
+  journal=neuralcomp,
   volume={9},
   number={8},
   pages={1735--1780},
@@ -3047,7 +3048,7 @@ year={2014}
 @article{Gers:NC'00,
   title={Learning to Forget: Continual Prediction with {LSTM}},
   author={Felix A. Gers and J\"{u}rgen Schmidhuber and Fred Cummins},
-  journal={Neural Computation},
+  journal=neuralcomp,
   volume={12},
   number={10},
   pages={2451--2471},
@@ -3199,7 +3200,7 @@ year={2014}
 @article{LeCun:NC'89,
   title={Backpropagation Applied to Handwritten Zip Code Recognition},
   author={Yann LeCun and Bernhard E. Boser and John S. Denker and Donnie Henderson and Richard E. Howard and Wayne E. Hubbard and Lawrence D. Jackel},
-  journal={Neural Computation},
+  journal=neuralcomp,
   volume={1},
   number={4},
   pages={541--551},
@@ -4564,4 +4565,59 @@ Alexander S. Vezhnevets and Rémi Leblond and Tobias Pohlen and Valentin Dalibar
   year =         {2016},
   month = {October},
   pages =    {2173--2183},
+}
+
+@article{Maass:NC'02,
+  title={Real-time computing without stable states: a new framework for neural computation based on perturbations},
+  author={Wolfgang Maass and Thomas Natschl\"{a}ger and Henry Markram},
+  journal=neuralcomp,
+  volume={14},
+  number={11},
+  pages={2531--2560},
+  year={2002},
+  month={November},
+}
+
+@article{Jaeger:SCIENCE'04,
+  title={Harnessing Nonlinearity: Predicting Chaotic Systems and Saving Energy in Wireless Communication},
+  author={Herbert Jaeger and Harald Haas},
+  journal={Science},
+  volume={304},
+  number={5667},
+  pages={78--80},
+  month={April},
+  year={2004}
+}
+
+@article{Steil:NN'07,
+  title={Online reservoir adaptation by intrinsic plasticity for backpropagation-decorrelation and echo state learning},
+  author={Jochen J. Steil},
+  journal={Neural Networks},
+  volume={20},
+  number={3},
+  pages={353--364},
+  year={2007},
+  month={April},
+}
+
+@article{Gallicchio:NC'17,
+  title={Deep reservoir computing: A critical experimental analysis},
+  author={Claudio Gallicchio and Alessio Micheli and Luca Pedrelli},
+  journal=neuralcomp,
+  volume={268},
+  OPTnumber={11},
+  pages={87--99},
+  year={2017},
+  month={December},
+}
+
+@ARTICLE{Qiao:TNNLS'17,
+	author = {Junfei Qiao and Fanjun Li and Honggui Han and Wenjing Li},
+	title = {Growing Echo-State Network With Multiple Subreservoirs},
+	journal = tnnls,
+	year = {2017},
+        month = {February},
+        volume = {28},
+        number = {2},
+        pages = {391--404},
 }
