--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4621,3 +4621,29 @@ Alexander S. Vezhnevets and Rémi Leblond and Tobias Pohlen and Valentin Dalibar
         number = {2},
         pages = {391--404},
 }
+
+@inproceedings{Mao:CVPR'17,
+  title={Exploring the Granularity of Sparsity in Convolutional Neural Networks},
+  author={Huizi Mao and Song Han and Jeff Pool and Wenshuo Li and Xingyu Liu and Yu Wang and William J. Dally},
+  booktitle=cvpr,
+  pages={13--20},
+  year={2017},
+}
+
+@inproceedings{Li:ICLR'17,
+  title={Pruning Filters for Efficient {ConvNets}},
+  author={Hao Li and Asim Kadav and Igor Durdanovic and Hanan Samet and Hans Peter Graf},
+  booktitle={"Proc. Int. Conf. on Learning Representations (ICLR)"},
+  pages={1--13},
+  year={2017},
+}
+
+@inproceedings{Wen:NIPS'16,
+  title={Learning structured sparsity in deep neural networks},
+  author={Wei Wen and Chunpeng Wu and Yandan Wang and Yiran Chen and Hai Li},
+  booktitle=nips,
+  pages={2082--2090},
+  year={2016},
+  month={December},
+}
+
