--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4647,3 +4647,19 @@ Alexander S. Vezhnevets and Rémi Leblond and Tobias Pohlen and Valentin Dalibar
   month={December},
 }
 
+@inproceedings{Lu:ICASSP'16,
+  title={Learning Compact Recurrent Neural Networks},
+  author={Zhiyun Lu and Vikas Sindhwani and Tara N. Sainath},
+  booktitle={Proc. Int. Conf. on Acoustics, Speech and Signal Processing (ICASSP)},
+  pages={5960--5964},
+  year={2016},
+}
+
+@inproceedings{Ye:CVPR'18,
+  title={Learning Compact Recurrent Neural Networks with Block-Term Tensor Decomposition},
+  author={Jinmian Ye and Linnan Wang and Guangxi Li and Di Chen and Shandian Zhe and Xinqi Chu and Zenglin Xu},
+  booktitle=cvpr,
+  pages={9378--9387},
+  year={2018},
+}
+
