--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4663,3 +4663,18 @@ Alexander S. Vezhnevets and Rémi Leblond and Tobias Pohlen and Valentin Dalibar
   year={2018},
 }
 
+@inproceedings{Narang:ICLR'17,
+  title={Exploring Sparsity in Recurrent Neural Networks},
+  author={Sharan Narang and Greg Diamos and Shubho Sengupta and Erich Elsen},
+  booktitle={"Proc. Int. Conf. on Learning Representations (ICLR)"},
+  pages={1--10},
+  year={2017},
+}
+
+@inproceedings{Yang:ICML'17,
+	title={Tensor-train recurrent neural networks for video classification},
+	author={Yinchong Yang and Denis Krompass and Volker Tresp},
+	booktitle=icml,
+	pages={3891--3900},
+	year={2017},
+}
