--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4633,7 +4633,7 @@ Alexander S. Vezhnevets and Rémi Leblond and Tobias Pohlen and Valentin Dalibar
 @inproceedings{Li:ICLR'17,
   title={Pruning Filters for Efficient {ConvNets}},
   author={Hao Li and Asim Kadav and Igor Durdanovic and Hanan Samet and Hans Peter Graf},
-  booktitle={"Proc. Int. Conf. on Learning Representations (ICLR)"},
+  booktitle={Proc. Int. Conf. on Learning Representations (ICLR)},
   pages={1--13},
   year={2017},
 }
