--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4678,3 +4678,15 @@ Alexander S. Vezhnevets and Rémi Leblond and Tobias Pohlen and Valentin Dalibar
 	pages={3891--3900},
 	year={2017},
 }
+
+@article{Sultan:TVLSI'20,
+  	title={A Fast Leakage-Aware {Green's}-Function-Based Thermal Simulator for {3-D} Chips},
+  	author={Hameedah Sultan and Smruti R. Sarangi},
+  	journal=tvlsi,
+  	volume={28},
+  	number={11},
+  	pages={2342--2355},
+  	year={2020},
+	month={November},
+  	publisher={IEEE}
+}
