--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -890,6 +890,7 @@ for Mixed {ILP-TLP} Workloads in Dark Silicon Chips},
   author={Heba Khdr and Santiago Pagani and Muhammad Shafique and J\"{o}rg Henkel},
   booktitle= dac,
   year={2015},
+  month =  {June},
 }
 
 @inproceedings{Cong:ISLPED'12,
