--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -50,6 +50,7 @@
 @string{tnn="IEEE Trans. on Neural Networks"}
 @string{tnnls="IEEE Trans. on Neural Networks and Learning Systems"}
 @string{neuralcomp="Neural Computation"}
+@string{neuralnet="Neural Networks"}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
@@ -2860,7 +2861,7 @@ year={2014}
 @article{Jaeger:NN'07,
   title={Optimization and applications of echo state networks with leaky-integrator neurons},
   author={Herbert Jaeger and Mantas Lukoševičius and Popovici Dan and Udo Siewert},
-  journal={Neural Networks},
+  journal=neuralnet,
   volume={20},
   number={3},
   pages={335--352},
@@ -3016,7 +3017,7 @@ year={2014}
 @article{Trischler:NN'16,
   title={Synthesis of recurrent neural networks for dynamical system simulation},
   author={Adam P Trischler and Gabriele MT {D'Eleuterio}},
-  journal={Neural Networks},
+  journal=neuralnet,
   volume={80},
   OPTnumber={},
   pages={67--78},
@@ -4593,7 +4594,7 @@ Alexander S. Vezhnevets and Rémi Leblond and Tobias Pohlen and Valentin Dalibar
 @article{Steil:NN'07,
   title={Online reservoir adaptation by intrinsic plasticity for backpropagation-decorrelation and echo state learning},
   author={Jochen J. Steil},
-  journal={Neural Networks},
+  journal=neuralnet,
   volume={20},
   number={3},
   pages={353--364},
@@ -4690,4 +4691,14 @@ Alexander S. Vezhnevets and Rémi Leblond and Tobias Pohlen and Valentin Dalibar
   	year={2020},
 	month={November},
   	publisher={IEEE}
+}
+
+@article{Boccato:NN'12,
+  title={An extended echo state network using Volterra filtering and principal component analysis},
+  author={Levy Boccato and Amauri Lopes and Romis Attux and Fernando J. Von Zuben},
+  journal=neuralnet,
+  volume={32},
+  pages={292--302},
+  month={August},
+  year={2012},
 }
