--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4695,7 +4695,7 @@ Alexander S. Vezhnevets and Rémi Leblond and Tobias Pohlen and Valentin Dalibar
 
 @article{Boccato:NN'12,
   title={An extended echo state network using Volterra filtering and principal component analysis},
-  author={Levy Boccato and Amauri Lopes and Romis Attux and Fernando J. Von Zuben},
+  author={Levy Boccato and Amauri Lopes and Romis Attux and Fernando J. {Von Zuben}},
   journal=neuralnet,
   volume={32},
   pages={292--302},
