--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -51,6 +51,7 @@
 @string{tnnls="IEEE Trans. on Neural Networks and Learning Systems"}
 @string{neuralcomp="Neural Computation"}
 @string{neuralnet="Neural Networks"}
+@string{access="IEEE Access"}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
@@ -2543,7 +2544,7 @@ Year={2016}
 @article{Wang:access'17,
   title={A {DVFS} based energy-efficient tasks scheduling in a data center},
   author={Songyun Wang and Zhuzhong Qian and Jiabin Yuan and Ilsun You},
-  journal={IEEE Access},
+  journal=access,
   volume={5},
   pages={13090--13102},
   year={2017},
@@ -3726,7 +3727,7 @@ month ={November},
 @article{Hannan:IA'18,
   title={A Review of Internet of Energy Based Building Energy Management Systems: Issues and Recommendations},
   author={Mahammad A. Hannan and Mohammad Faisal and Pin Jern Ker and Looe Hui Mun and Khadija Parvin and Teuku Meurah Indra Mahlia and Frede Blaabjerg},
-  journal={IEEE Access},
+  journal=access,
   volume={6},
   pages={38997--39014},
   year={2018},
@@ -3735,7 +3736,7 @@ month ={November},
 @article{Meng:IA'18,
   title={Going Beyond the Mean: Distributional Degree-Day Base Temperatures for Building Energy Analytics Using Change Point Quantile Regression},
   author={Qinglong Meng and Monjur Mourshed and Shen Wei},
-  journal={IEEE Access},
+  journal=access,
   volume={6},
   pages={39532--39540},
   year={2018},
@@ -4701,4 +4702,32 @@ Alexander S. Vezhnevets and Rémi Leblond and Tobias Pohlen and Valentin Dalibar
   pages={292--302},
   month={August},
   year={2012},
+}
+
+@article{Lokse:CC'17,
+  title={Training Echo State Networks with Regularization Through Dimensionality Reduction},
+  author={Sigurd Løkse and Filippo Maria Bianchi and Robert Jenssen},
+  journal={Cognitive Computation},
+  volume={9},
+  pages={364--378},
+  OPTmonth={August},
+  year={2017},
+}
+
+@article{Bianchi:ACCESS'15,
+  title={Short-Term Electric Load Forecasting Using Echo State Networks and {PCA} Decomposition},
+  author={Filippo Maria Bianchi and Enrico {De Santis} and Antonello Rizzi and Alireza Sadeghian},
+  journal=access,
+  volume={3},
+  pages={1931--1943},
+  year={2015},
+}
+
+@inproceedings{Kanai:NIPS'17,
+  title={Preventing Gradient Explosions in Gated Recurrent Units},
+  author={Sekitoshi Kanai and Yasuhiro Fujiwara and Sotetsu Iwamura},
+  booktitle=nips,
+  pages={435--444},
+  year={2017},
+  month={December},
 }
