--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4731,3 +4731,13 @@ Alexander S. Vezhnevets and Rémi Leblond and Tobias Pohlen and Valentin Dalibar
   year={2017},
   month={December},
 }
+
+@inproceedings{Elafrou:ICPP'17,
+	title={Performance Analysis and Optimization of Sparse Matrix-Vector Multiplication on Modern Multi- and Many-Core Processors},
+	author={Athena Elafrou and Georgios Goumas and Nectarios Koziris},
+	booktitle={Proc. Int. Conf. on Parallel Processing (ICPP)},
+	year={2017},
+	month={August},
+	pages={292--301},
+	location={Bristol, UK},
+}
