--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4272,7 +4272,7 @@ location = {Austin, TX, USA},
 }
 
 @techreport{Jaeger:Report'01,
-  title={The "echo state" approach to analysing and training recurrent neural networks},
+  title={The ``echo state" approach to analysing and training recurrent neural networks},
   author={Herbert Jaeger},
   year={2001},
   institution={GMD - German National Research Institute for Computer Science}
