--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -61,11 +61,11 @@
 	author = {Hai Wang and Wei Li and Wenjie Qi and Diya Tang and Letian Huang and He Tang},
 	journal = toc,
 	title = {Runtime Performance Optimization of {3-D} Microprocessors in Dark Silicon},
-	year = {2020},
-        OPTmonth = {April},
-        OPTvolume = {68},
-        OPTnumber = {4},
-        OPTpages = {526--541},
+	year = {2021},
+        month = {October},
+        volume = {70},
+        number = {10},
+        pages = {1539--1554},
 }
 
 @ARTICLE{WangHu:TII'20,
