--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4741,3 +4741,14 @@ Alexander S. Vezhnevets and Rémi Leblond and Tobias Pohlen and Valentin Dalibar
 	pages={292--301},
 	location={Bristol, UK},
 }
+
+@Article{Pathania:ESL'19,
+  author =       {Anuj Pathania and J\"{o}rg Henkel},
+  title =        {{HotSniper}: Sniper-Based Toolchain for Many-Core Thermal Simulations in Open Systems},
+  journal =       {IEEE Embedded Systems Letters},
+  volume =   {11},
+  number =   {2},
+  year =         {2019},
+  month = {June},
+  pages =    {54--57},
+}
