--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4752,3 +4752,25 @@ Alexander S. Vezhnevets and Rémi Leblond and Tobias Pohlen and Valentin Dalibar
   month = {June},
   pages =    {54--57},
 }
+
+@Article{Kwon:TCASI'21,
+  author =       {Eunji Kwon and Sodam Han and Yoonho Park and Jongho Yoon and Seokhyeong Kang},
+  title =        {Reinforcement Learning-Based Power Management Policy for Mobile Device Systems},
+  journal =      tcasI,
+  year =         {2021},
+  OPTvolume =   {56},
+  OPTnumber =   {9},
+  OPTpages =     {1994--2007},
+  OPTmonth =     {September},
+}
+
+@Article{Hoppner:TCASI'19,
+  author =       {Sebastian H\"{o}ppner and Bernhard Vogginger and Yexin Yan and Andreas Dixius and Stefan Scholze and Johannes Partzsch and Felix Neum\"{a}rker and Stephan Hartmann and Stefan Schiefer and Georg Ellguth and Love Cederstroem and Luis A. Plana and Jim Garside and Steve Furber and Christian Mayr},
+  title =        {Dynamic Power Management for Neuromorphic Many-Core Systems},
+  journal =      tcasI,
+  year =         {2019},
+  volume =   {66},
+  number =   {8},
+  pages =     {2973--2986},
+  month =     {August},
+}
