--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -52,6 +52,7 @@
 @string{neuralcomp="Neural Computation"}
 @string{neuralnet="Neural Networks"}
 @string{access="IEEE Access"}
+@string{iclr="Proc. Int. Conf. on Learning Representations (ICLR)"}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
@@ -4636,8 +4637,8 @@ Alexander S. Vezhnevets and Rémi Leblond and Tobias Pohlen and Valentin Dalibar
 @inproceedings{Li:ICLR'17,
   title={Pruning Filters for Efficient {ConvNets}},
   author={Hao Li and Asim Kadav and Igor Durdanovic and Hanan Samet and Hans Peter Graf},
-  booktitle={Proc. Int. Conf. on Learning Representations (ICLR)},
-  pages={1--13},
+  booktitle=iclr,
+  OPTpages={1--13},
   year={2017},
 }
 
@@ -4669,9 +4670,17 @@ Alexander S. Vezhnevets and Rémi Leblond and Tobias Pohlen and Valentin Dalibar
 @inproceedings{Narang:ICLR'17,
   title={Exploring Sparsity in Recurrent Neural Networks},
   author={Sharan Narang and Greg Diamos and Shubho Sengupta and Erich Elsen},
-  booktitle={"Proc. Int. Conf. on Learning Representations (ICLR)"},
-  pages={1--10},
+  booktitle=iclr,
+  OPTpages={1--10},
   year={2017},
+}
+
+@inproceedings{Wen:ICLR'18,
+  title={Learning Intrinsic Sparse Structures Within Long Short-Term Memory},
+  author={Wei Wen and Yiran Chen and Hai Li and Yuxiong He and Samyam Rajbhandari and Minjia Zhang and Wenhan Wang and Fang Liu and Bin Hu},
+  booktitle=iclr,
+  OPTpages={1--10},
+  year={2018},
 }
 
 @inproceedings{Yang:ICML'17,
@@ -4774,3 +4783,4 @@ Alexander S. Vezhnevets and Rémi Leblond and Tobias Pohlen and Valentin Dalibar
   pages =     {2973--2986},
   month =     {August},
 }
+
