--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4784,3 +4784,34 @@ Alexander S. Vezhnevets and Rémi Leblond and Tobias Pohlen and Valentin Dalibar
   month =     {August},
 }
 
+@article{Wen:NN'20,
+  title={Structured pruning of recurrent neural networks through neuron selection},
+  author={Liangjian Wen and Xuanyang Zhang and Haoli Bai and Zenglin Xu},
+  journal=neuralnet,
+  volume={123},
+  OPTnumber={3},
+  pages={134--141},
+  month = {March},
+  year={2020},
+}
+
+@article{Deng:IEEEPROC'20,
+  author={Lei Deng and Guoqi Li and Song Han and Luping Shi and Yuan Xie},
+  title={Model Compression and Hardware Acceleration for Neural Networks: A Comprehensive Survey},
+  journal =  ieeeproc,
+  year={2020},
+  month =  {April},
+  volume = {108},
+  number = {4},
+  pages = {485--532},
+}
+
+@inproceedings{Sak:INTERSPEECH'14,
+	title={Long short-term memory recurrent neural network architectures for large scale acoustic modeling},
+	author={Haşim Sak and Andrew Senior and Françoise Beaufays},
+	booktitle={Proc. Interspeech},
+	year={2014},
+	OPTmonth={August},
+	pages={338--342},
+	OPTlocation={Bristol, UK},
+}
