--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4815,3 +4815,12 @@ Alexander S. Vezhnevets and Rémi Leblond and Tobias Pohlen and Valentin Dalibar
 	pages={338--342},
 	OPTlocation={Bristol, UK},
 }
+
+@inproceedings{Connor:NIPS'91,
+  title={Recurrent Networks and {NARMA} Modeling},
+  author={Jerome Connor and Les E. Atlas and Douglas R. Martin},
+  booktitle=nips,
+  pages={301--308},
+  year={1991},
+  month={December},
+}
