--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4824,3 +4824,13 @@ Alexander S. Vezhnevets and Rémi Leblond and Tobias Pohlen and Valentin Dalibar
   year={1991},
   month={December},
 }
+
+@inproceedings{Cho:SSST'14,
+  title={On the Properties of Neural Machine Translation: Encoder–Decoder Approaches},
+  author={Kyunghyun Cho and Bart van Merri\"{e}nboer and Dzmitry Bahdanau},
+  booktitle={Proc. Workshop on Syntax, Semantics and Structure in Statistical Translation},
+  pages={103--111},
+  year={2014},
+  month={October},
+  location={Doha, Qatar},
+}
