--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4432,6 +4432,17 @@ location = {Austin, TX, USA},
         pages = {131--144},
 }
 
+@ARTICLE{Rodan:NEURALCOMP'12,
+	author = {Ali Rodan and Peter Ti\v{n}o},
+	title = {Simple Deterministically Constructed Cycle Reservoirs with Regular Jumps},
+	journal = neuralcomp,
+	year = {2012},
+        month = {July},
+        volume = {24},
+        number = {7},
+        pages = {1822--1852},
+}
+
 @ARTICLE{Marchetti:TPAMI'20,
 	author = {Francesco Marchetti and Federico Becattini and Lorenzo Seidenari and Alberto Del Bimbo},
 	journal = tpami,
