--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -53,6 +53,7 @@
 @string{neuralnet="Neural Networks"}
 @string{access="IEEE Access"}
 @string{iclr="Proc. Int. Conf. on Learning Representations (ICLR)"}
+@string{tie="IEEE Trans. on Industrial Electronics"}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
@@ -2212,7 +2213,7 @@ Year={2016}
 @article{Yao:TIE'15,
   title={Power admission control with predictive thermal management in smart buildings},
   author={Jianguo Yao and Giuseppe Tommaso Costanzo and Guchuan Zhu and Bin Wen},
-  journal={IEEE Transactions on Industrial Electronics},
+  journal=tie,
   volume={62},
   number={4},
   pages={2642--2650},
@@ -2234,7 +2235,7 @@ Year={2016}
 @article{Pan:TIE'12,
   title={Model predictive control of unknown nonlinear dynamical systems based on recurrent neural networks},
   author={Yunpeng Pan and Jun Wang},
-  journal={IEEE Transactions on Industrial Electronics},
+  journal=tie,
   volume={59},
   number={8},
   pages={3089--3101},
@@ -2599,7 +2600,7 @@ Year={1987}
 @article{Mantovani:TIE'15,
   title={Temperature control of a commercial building with model predictive control techniques},
   author={Giancarlo Mantovani and Luca Ferrarini},
-  journal={IEEE Transactions on Industrial Electronics},
+  journal=tie,
   volume={62},
   number={4},
   pages={2651--2660},
@@ -4852,4 +4853,15 @@ title = {{Jena Climate Dataset}},
 OPTmonth = jun,
 OPTyear = {2009},
 url = {www.bgc-jena.mpg.de/wetter}
+}
+
+@ARTICLE{Diversi:TIE'20,
+	author = {Roberto Diversi and Andrea Bartolini and Luca Benini},
+	journal = tie,
+	title = {Thermal Model Identification of Computing Nodes in High-Performance Computing Systems},
+	year = {2020},
+        month = {September},
+        volume = {67},
+        number = {9},
+        pages = {7778--7788},
 }
