--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4865,3 +4865,24 @@ url = {www.bgc-jena.mpg.de/wetter}
         number = {9},
         pages = {7778--7788},
 }
+
+@Article{Malik:TCYB'17,
+  author =       {Zeeshan Khawar Malik and Amir Hussain and Qingming Jonathan Wu},
+  title =        {Multilayered Echo State Machine: A Novel Architecture and Algorithm},
+  journal =       {IEEE Trans. on Cybernetics},
+  volume =   {47},
+  number =   {4},
+  year =         {2017},
+  month = {April},
+  pages =    {946--959},
+}
+
+@ARTICLE{Ma:INFOSCI'20,
+	author = {Qianli Ma and Lifeng Shen and Garrison W. Cottrell},
+	journal = {Information Sciences},
+	title = {{DeePr-ESN}: A deep projection-encoding echo-state network},
+	year = {2020},
+        month = {February},
+        volume = {511},
+        pages = {152--171},
+}
