--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -59,6 +59,17 @@
 % publications from our lab
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@ARTICLE{WangHe:TCAD'22,
+	author = {Hai Wang and Wenjun He and Qinhui Yang and Xizhu Peng and He Tang},
+	journal = tcad,
+	title = {{DBP}: Distributed Power Budgeting for Many-Core Systems in Dark Silicon},
+	year = {2022},
+        OPTmonth = {October},
+        OPTvolume = {70},
+        OPTnumber = {10},
+        OPTpages = {1539--1554},
+}
+
 @ARTICLE{WangLi:TOC'21,
 	author = {Hai Wang and Wei Li and Wenjie Qi and Diya Tang and Letian Huang and He Tang},
 	journal = toc,
