--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -59,6 +59,17 @@
 % publications from our lab
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@ARTICLE{WangLong:TNNLS'23,
+	author = {Hai Wang and Xingyi Long and Xue-Xin Liu},
+	journal = tnnls,
+	title = {{fastESN}: Fast Echo State Network},
+	year = {2022},
+        OPTmonth = {October},
+        OPTvolume = {70},
+        OPTnumber = {10},
+        OPTpages = {1539--1554},
+}
+
 @ARTICLE{WangHe:TCAD'22,
 	author = {Hai Wang and Wenjun He and Qinhui Yang and Xizhu Peng and He Tang},
 	journal = tcad,
@@ -4896,4 +4907,32 @@ url = {www.bgc-jena.mpg.de/wetter}
         month = {February},
         volume = {511},
         pages = {152--171},
+}
+
+@inproceedings{Pascanu:ICLR'14,
+  title={How to construct deep recurrent neural networks},
+  author={Razvan Pascanu and Caglar Gulcehre and Kyunghyun Cho and Yoshua Bengio},
+  booktitle=iclr,
+  OPTpages={1--13},
+  year={2014},
+}
+
+@article{Rumelhart:NATURE'86,
+  title={Learning representations by back-propagating errors},
+  author={David E. Rumelhart and Geoffrey E. Hinton and Ronald J. Williams},
+  journal={Nature},
+  volume={323},
+  OPTnumber={7--9},
+  pages={533--536},
+  month={October},
+  year={1986}
+}
+
+@inproceedings{Hihi:NIPS'95,
+  title={Hierarchical recurrent neural networks for long-term dependencies},
+  author={Salah {El Hihi} and Yoshua Bengio},
+  booktitle=nips,
+  pages={493--499},
+  year={1995},
+  month={November},
 }
