--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -54,6 +54,7 @@
 @string{access="IEEE Access"}
 @string{iclr="Proc. Int. Conf. on Learning Representations (ICLR)"}
 @string{tie="IEEE Trans. on Industrial Electronics"}
+@string{cl="Computational Linguistics"}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
@@ -4875,6 +4876,20 @@ title = {{Jena Climate Dataset}},
 OPTmonth = jun,
 OPTyear = {2009},
 url = {www.bgc-jena.mpg.de/wetter}
+}
+
+@article{PennTreeBank:CL'93,
+    title = "Building a Large Annotated Corpus of {E}nglish: The {P}enn {T}reebank",
+    author = "Marcus, Mitchell P.  and
+      Santorini, Beatrice  and
+      Marcinkiewicz, Mary Ann",
+    journal = cl,
+    volume = "19",
+    number = "2",
+    year = "1993",
+    address = "Cambridge, MA",
+    publisher = "MIT Press",
+    pages = "313--330",
 }
 
 @ARTICLE{Diversi:TIE'20,
