--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4951,3 +4951,12 @@ url = {www.bgc-jena.mpg.de/wetter}
   year={1995},
   month={November},
 }
+
+@misc{Zaremba:ARXIV'14,
+  author = {Zaremba, Wojciech and Sutskever, Ilya and Vinyals, Oriol},
+  keywords = {Neural and Evolutionary Computing (cs.NE), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title = {Recurrent Neural Network Regularization},
+  publisher = {arXiv},
+  note = {arXiv:1409.2329, 2014},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
