--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4960,3 +4960,10 @@ url = {www.bgc-jena.mpg.de/wetter}
   note = {arXiv:1409.2329, 2014},
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
+@book{zhan2002matrix,
+  title="Matrix inequalities",
+  author={Zhan, Xingzhi},
+  volume={1790},
+  year={2002},
+  publisher={Springer Science \& Business Media}
+}
