--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4960,10 +4960,14 @@ url = {www.bgc-jena.mpg.de/wetter}
   note = {arXiv:1409.2329, 2014},
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
-@book{zhan2002matrix,
-  title="Matrix inequalities",
-  author={Zhan, Xingzhi},
-  volume={1790},
-  year={2002},
-  publisher={Springer Science \& Business Media}
+
+@book{zhang2013matrix,
+  title={Matrix Theory: Basic Results and Techniques},
+  author={Zhang, F.},
+  isbn={9781475757972},
+  lccn={98051754},
+  series={Universitext},
+  year={2013},
+  publisher={Springer New York},
+  pages = {275--276}
 }
