--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4961,7 +4961,7 @@ url = {www.bgc-jena.mpg.de/wetter}
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
-@book{zhang2013matrix,
+@inbook{zhang2013matrix,
   title={Matrix Theory: Basic Results and Techniques},
   author={Zhang, F.},
   isbn={9781475757972},
