--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4971,3 +4971,14 @@ url = {www.bgc-jena.mpg.de/wetter}
   publisher={Springer New York},
   pages = {275--276}
 }
+
+@article{Zervakis:TOC'22,
+  author={Georgios Zervakis and Iraklis Anagnostopoulos and Sami Salamin and Ourania Spantidi and Isai Roman-Ballesteros and J\"{o}rg Henkel and Hussam Amrouch},
+  title={Thermal-Aware Design for Approximate {DNN} Accelerators},
+  journal = toc,
+  year={2022},
+  volume = {71},
+  number = {10},
+  pages = {2687--2697},
+  month =  {October}
+}
