--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4982,3 +4982,12 @@ url = {www.bgc-jena.mpg.de/wetter}
   pages = {2687--2697},
   month =  {October}
 }
+
+@inproceedings{Cho:EMNLP'14,
+  title={Learning Phrase Representations using {RNN} Encoder–Decoder for Statistical Machine Translation},
+  author={Kyunghyun Cho and Bart {van Merri\"{e}nboer} and Caglar Gulcehre and Dzmitry Bahdanau and Fethi Bougares and Holger Schwenk and Yoshua Bengio},
+  booktitle={Proc. Conf. on Empirical Methods in Natural Language Processing (EMNLP)},
+  month = {October},
+  year={2014},
+  location = {Doha, Qatar},
+}
