--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3979,7 +3979,7 @@ month ={November},
   pages = {338--343}
  }
 
- @article{Loh:MICRO'07,
+@article{Loh:MICRO'07,
   title={Processor Design in {3D} Die-Stacking Technologies},
   author={Gabriel H. Loh and Yuan Xie and Bryan Black},
   journal=micro,
@@ -4990,4 +4990,26 @@ url = {www.bgc-jena.mpg.de/wetter}
   month = {October},
   year={2014},
   location = {Doha, Qatar},
+}
+
+@article{Guo:TRETS'19,
+  author = {Kaiyuan Guo and Shulin Zeng and Jincheng Yu and Yu Wang and Huazhong Yang},
+  title = {[{DL}] {A} Survey of {FPGA}-based Neural Network Inference Accelerators},
+  journal = {ACM Transactions on Reconfigurable Technology and Systems},
+  volume = {12},
+  number = {1},
+  month = {March},
+  year = {2019},
+  pages = {2:1--2:26}
+}
+
+@article{Esmaeilzadeh:MICRO'13,
+  title={Neural Acceleration for General-Purpose Approximate Programs},
+  author={Hadi Esmaeilzadeh and Adrian Sampson and Luis Ceze and Doug Burger},
+  journal=micro,
+  pages={16--27},
+  volumn = {33},
+  number = {3},
+  year={2012},
+  month = {May/June},
 }
