update for transformer

--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5013,3 +5013,37 @@ url = {www.bgc-jena.mpg.de/wetter}
   year={2013},
   month = {May/June},
 }
+
+@inproceedings{Vas:NIPS'17,
+ author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, \L ukasz and Polosukhin, Illia},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {I. Guyon and U. Von Luxburg and S. Bengio and H. Wallach and R. Fergus and S. Vishwanathan and R. Garnett},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {Attention is All you Need},
+ url = {https://proceedings.neurips.cc/paper/2017/file/3f5ee243547dee91fbd053c1c4a845aa-Paper.pdf},
+ volume = {30},
+ year = {2017}
+}
+
+@article{Zhou:AAAI'21,
+title={Informer: Beyond Efficient Transformer for Long Sequence Time-Series Forecasting}, volume={35},
+url={https://ojs.aaai.org/index.php/AAAI/article/view/17325},
+DOI={10.1609/aaai.v35i12.17325},
+number={12},
+journal={Proceedings of the AAAI Conference on Artificial Intelligence},
+author={Zhou, Haoyi and Zhang, Shanghang and Peng, Jieqi and Zhang, Shuai and Li, Jianxin and Xiong, Hui and Zhang, Wancai},
+year={2021}, month={May}, pages={11106-11115} }
+
+@inproceedings{Kit:ICLR'20,
+  author    = {Nikita Kitaev and Lukasz Kaiser and Anselm Levskaya},
+  title     = {Reformer: The Efficient Transformer},
+  booktitle = {8th International Conference on Learning Representations, {ICLR} 2020,
+               Addis Ababa, Ethiopia, April 26-30, 2020},
+  publisher = {OpenReview.net},
+  year      = {2020},
+  url       = {https://openreview.net/forum?id=rkgNKkHtvB},
+  timestamp = {Thu, 07 May 2020 17:11:48 +0200},
+  biburl    = {https://dblp.org/rec/conf/iclr/KitaevKL20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
