--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3984,7 +3984,7 @@ month ={November},
   author={Gabriel H. Loh and Yuan Xie and Bryan Black},
   journal=micro,
   pages={31--48},
-  volumn = {27},
+  volume = {27},
   number = {3},
   year={2007},
   month = {May},
@@ -5008,7 +5008,7 @@ url = {www.bgc-jena.mpg.de/wetter}
   author={Hadi Esmaeilzadeh and Adrian Sampson and Luis Ceze and Doug Burger},
   journal=micro,
   pages={16--27},
-  volumn = {33},
+  volume = {33},
   number = {3},
   year={2013},
   month = {May/June},
