--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5040,3 +5040,32 @@ pages={11106--11115}
   month = {April},
   location = {Addis Ababa, Ethiopia},
 }
+
+@inproceedings{Li:FCCM'15,
+  author    = {Sicheng Li and Chunpeng Wu and Hai Li and Boxun Li and Yu Wang and Qinru Qiu},
+  title     = {{FPGA} Acceleration of Recurrent Neural Network based Language Model},
+  booktitle = {Proc. IEEE Int. Symp. On Field-Programmable Custom Computing Machines (FCCM)},
+  year      = {2015},
+  month = {May},
+  location = {Vancouver, BC, Canada},
+}
+
+@article{Maeda:TNN'05,
+  title={Simultaneous perturbation learning rule for recurrent neural networks and its {FPGA} implementation},
+  author={Yutaka Maeda and Masatoshi Wakamura},
+  journal=tnn,
+  volume={16},
+  number={6},
+  pages={1664--1672},
+  year={2005},
+  month={November},
+}
+
+@inproceedings{Chang:ISCAS'17,
+	title={Hardware accelerators for recurrent neural networks on {FPGA}},
+	author={Andre Xian Ming Chang and Eugenio Culurciello},
+	booktitle=iscas,
+	year={2017},
+	month={May},
+	location = {Baltimore, MD, USA},
+}
