--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5069,3 +5069,49 @@ pages={11106--11115}
 	month={May},
 	location = {Baltimore, MD, USA},
 }
+
+@article{Gao:JETCAS'20,
+	title={{EdgeDRNN}: Recurrent Neural Network Accelerator for Edge Inference},
+	author={Chang Gao and Antonio Rios-Navarro and Xi Chen and Shih-Chii Liu and Tobi Delbruck},
+	journal={IEEE Journal on Emerging and Selected Topics in Circuits and Systems},
+	volume={10},
+	number={4},
+	pages={419--432},
+	year={2020},
+}
+
+@inproceedings{Guan:ASPDAC'17,
+ author = {Yijin Guan and Zhihang Yuan and Guangyu Sun and Jason Cong},
+ title = {{FPGA}-based Accelerator for Long Short-Term Memory Recurrent Neural Networks},
+ booktitle = aspdac,
+ year = {2017},
+ month = {January},
+ location = {Chiba, Japan},
+}
+
+@inproceedings{Li:ISLPED'20,
+  title={{FTRANS}: energy-efficient acceleration of transformers using {FPGA}},
+  author={Bingbing Li and Santosh Pandey and Haowen Fang and Yanjun Lyv and Ji Li and Jieyang Chen and Mimi Xie and Lipeng Wan and Hang Liu and Caiwen Ding},
+  booktitle=islped,
+  pages={175--180},
+  year={2020},
+  mont={August},
+}
+
+@inproceedings{Lu:SOCC'20,
+ author = {Siyuan Lu and Meiqi Wang and Shuang Liang and Jun Lin and Zhongfeng Wang},
+ title = {Hardware Accelerator for Multi-Head Attention and Position-Wise Feed-Forward in the Transformer},
+ booktitle = socc,
+ year = {2020},
+ month = {September},
+ location = {Las Vegas, NV, USA}
+}
+
+@inproceedings{Yang:ICCAD'20,
+	title={{ReTransformer}: {ReRAM}-based Processing-in-Memory Architecture for Transformer Acceleration},
+	author={Xiaoxuan Yang and Bonan Yan and Hai Li and Yiran Chen},
+	booktitle=iccad,
+	year={2020},
+	month={November},
+	location = {San Diego, CA},
+}
